--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.profiles.active=cat,EN
+spring.profiles.active=cat,EN,qa
+guru.username=renata.kajcsa
+guru.password=1234
+guru.jdbcURL=someURL
